# URSA

./: .gitignore  CMakeLists.txt  package.xml  params.xml  readme.md  requirements.txt
launch/: external.launch  gazebo_ursa.launch  manual.launch  manual_gazebo_ursa.launch  robot.launch  ursa.launch
src/: core  drive  manual  pathfinder  tf
src/testing/: test_path.py
src/util/: fsm.py  gridutil.py  maestro.py
srv/: DriveTo.srv  MotorSpeed.srv  Move.srv  PathfinderTarget.srv  TargetType.srv  Turn.srv
world/: ursa_sim.world
